syntax = "proto3";

package user_service.users;

option go_package = "./gen/go/users;pb_users";

service RegService {
  rpc Registration(RegRequest) returns (RegResponse) {}
  rpc CheckUser(CheckRequest) returns (CheckResponse) {}
  rpc CheckRole(CheckRoleRequest) returns (CheckRoleResponse) {}
}

// Reg

message RegRequest {
  string username = 1;
  string class = 2;
  string phone = 3;
  int64 ID = 4;
}

message RegResponse {
  string error = 1;
  int64 status = 2;
}

// Check

message CheckRequest {
  int64 ID = 1;
}

message CheckResponse {
  bool checked = 1;
}

// CHECK ROLE

message CheckRoleRequest {
  int64 ID = 1;
}

message CheckRoleResponse {
  int64 role = 1;
  string error = 2;
  int64 status = 3;
}